amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


  * add: improved crossfading: will fade out smoothly when the stop button is pressed 
  * fix: O(n) behavior for playlist scrolling fixed
  * add: setting to make playlist colours the KDE defaults
  * add: support for tag-editing directly in playlist  
  * chg: replaced old FileBrowser with the comfortable fileselector from KDevelop
  * add: hide/show selected playlist columns
  * chg: upgrade streambrowser to kderadiostation 0.5
  * fix: many streams not loading from browser and AddItem dialog
  * chg: amaroK moved out of kdenonbeta. we are now member of KDE Extra Gear 1
  * add: on-screen-display (OSD), shows an overlay with information on the currently playing track
  * chg: use KMultiTabBar for browser selection
  * chg: migrated settings system to KConfig XT 
  * add: playlist columns for length and bitrate
  * add: merged new audio engine in. this provides a generic interface class, with multiple
         backends. right now there is a backend for aRts and one for GStreamer (still rudimentary)

==BEGIN KDE 3.2 DEPENDENCY==         
         
VERSION 0.8.3:
  * fix: build issue

VERSION 0.8.2:
  * add: added Hide/Show Playlist global shortcut (thanks gogo)
  * chg: mousewheel over trayicon behaviour changed
  * chg: search tokens can now be entered in random order
         ("Presley Elvis" will find "Elvis Presley")
  * fix: qt 3.1 compile issues

VERSION 0.8.1:
  * fix: compilation problem with KDE < 3.1.3

VERSION 0.8.0:
  * fix: KDE 3.1 compatibility re-gained
  * add: hitting return in the search field of the playlist starts playback of the
         first visible playlist entry (Qt >=3.2 only)
  * fix: fixed crash bug in playlist searching
  * fix: fixed crash bug when removing playlist-items
  * chg: new layout has been adopted
  * add: added accepting files dropped onto systray icon
  * fix: significant reduction in memory consumption for PlaylistItems