@@ -3,6 +3,8 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  * add: Select a series of tracks, start inline tag-editing a tag and amaroK will prompt you to
+         edit that tag for all tracks one-by-one
   * add: improved crossfading: will fade out smoothly when the stop button is pressed 
   * fix: O(n) behavior for playlist scrolling fixed
   * add: setting to make playlist colours the KDE defaults
